# open-fm

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SAVE_AND_SIM_PERFORMANCE_ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest-focused.json  vitest-report.json
src-engine/: Cargo.toml
src-engine/crates/db/: Cargo.toml
src-engine/crates/db/src/: app_db.rs  game_database.rs  game_persistence.rs  lib.rs  migrations.rs  opfs.rs  save_index.rs  save_index_manager.rs  save_manager.rs
src-engine/crates/db/src/repositories/: league_repo.rs  message_repo.rs  meta_repo.rs  news_repo.rs  objective_repo.rs  player_repo.rs  staff_repo.rs  stats_repo.rs  team_repo.rs
src-engine/crates/db/src/sql/: v001_initial_schema.sql  v002_training_groups.sql  v003_alternate_positions.sql  v004_natural_position.sql  v007_team_financial_ledger.sql  v008_team_sponsorship.sql  v009_team_facilities.sql  v012_fixture_competition.sql  v013_player_fitness.sql  v015_match_stats_history.sql  v018_transfer_log.sql  v019_player_squad_role.sql  v021_youth_scouting_assignments.sql  v022_youth_scouting_target_position.sql  v023_youth_scouting_search_profile.sql  v024_team_custom_tactic_slots.sql  v025_team_tactic_presets.sql  v026_transfer_completion.sql  (+10 more)
src-engine/crates/domain/src/: identity.rs  league.rs  negotiation.rs  news.rs  player.rs  season.rs  staff.rs  stats.rs  team.rs
src-engine/crates/engine/: Cargo.toml
src-engine/crates/engine/examples/: bench_simulate.rs
src-engine/crates/engine/src/: ai.rs  lib.rs  report.rs  shared.rs  types.rs
src-engine/crates/engine/tests/: live_match_tests.rs  simulation_tests.rs
src-engine/crates/engine_wasm/: Cargo.toml
src-engine/crates/engine_wasm/src/: lib.rs
src-engine/crates/ofm_core/: Cargo.toml
src-engine/crates/ofm_core/examples/: generated_realism_benchmark.rs
src-engine/crates/ofm_core/src/: aging.rs  ai_hiring.rs  board_objectives.rs  clock.rs  club.rs  contract_wage_policy.rs  contracts.rs  delegated_renewals.rs  end_of_season.rs  firing.rs  football_identity.rs  game.rs  honours.rs  knockout.rs  leaderboards.rs  lib.rs  live_match_manager.rs  messages.rs  news.rs  player_identity.rs  player_rating.rs  reputation.rs  schedule.rs  scouting.rs  season_awards.rs  season_context.rs  squad_safety.rs  state.rs  training.rs  transfers.rs  wc2026_schedule_groups_knockout.json
src-engine/crates/ofm_core/tests/: club_tests.rs  end_of_season_tests.rs  finances_tests.rs  live_match_manager_tests.rs  player_events_tests.rs  random_events_tests.rs  training_tests.rs  transfers_tests.rs  turn_tests.rs
src-engine/data/: default_names.json  default_teams.json
src-engine/examples/: fc26_save_sim_benchmark.rs  scale_benchmarks.rs
src-engine/src/: lib.rs  main.rs
src-engine/src/app_handle/: club.rs  contracts.rs  finances.rs  game.rs  god_mode.rs  jobs.rs  live_match.rs  messages.rs  mod.rs  season.rs  settings.rs  squad.rs  staff.rs  stats.rs  time.rs  transfers.rs  world.rs
src-engine/src/application/: live_match.rs  mod.rs  round_summary.rs  team_talk.rs  time_advancement.rs  time_blockers.rs  vacation.rs
src-engine/src/application/stats/: dto.rs  leaderboards.rs  match_detail.rs  mod.rs  player.rs  shared.rs  team.rs
src-engine/src/commands/: contracts.rs  finances.rs  game.rs  live_match.rs  messages.rs  mod.rs  settings.rs  squad.rs  staff.rs  time.rs  transfers.rs  world.rs
src-engine/src/commands/stats/: dto.rs  leaderboards.rs  mod.rs  player.rs  shared.rs  team.rs  tests.rs
src-tauri/: Cargo.toml  tauri.conf.json  test_compile.rs
src-tauri/capabilities/: default.json
src-tauri/crates/db/: Cargo.toml
src-tauri/crates/db/src/: legacy_migration.rs  lib.rs  save_index.rs  save_index_manager.rs  save_manager.rs
src-tauri/crates/domain/: Cargo.toml
src-tauri/crates/domain/src/: lib.rs  manager.rs  message.rs
src-tauri/crates/engine/src/: event.rs  lib.rs  report.rs
src-tauri/crates/engine/tests/: live_match_tests.rs
src-tauri/crates/ofm_core/src/: ai_hiring.rs  board_objectives.rs  contracts.rs  finances.rs  job_offers.rs  lib.rs  live_match_manager.rs  schedule.rs
src-tauri/crates/ofm_core/tests/: contracts_tests.rs  end_of_season_tests.rs  messages_tests.rs  player_events_tests.rs  player_rating_tests.rs  scouting_tests.rs  training_tests.rs  transfers_tests.rs
src-tauri/databases/: README.md
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: club.rs  game.rs  jobs.rs  season.rs  settings.rs
src-tauri/src/commands/stats/: player.rs
(+507 files in other folders)
