[package]
name = "openfootmanager"
version = "0.2.0"
description = "Openfoot Manager"
authors = ["Sturdy Robot (admin@esportsmanager.net)"]
edition = "2021"

[lib]
name = "openfootmanager_lib"
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["crates/ofm_core", "crates/db", "crates/domain", "crates/engine", "crates/engine_wasm"]

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[dependencies]
log = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
domain = { path = "crates/domain" }
ofm_core = { path = "crates/ofm_core" }
engine = { path = "crates/engine" }
db = { path = "crates/db" }
chrono = "0.4.44"
rand = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
