[package]
name = "openfootmanager"
version = "0.2.0"
description = "Openfoot Manager"
authors = ["Sturdy Robot (admin@esportsmanager.net)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openfootmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = ["crates/ofm_core", "crates/db", "crates/domain", "crates/engine"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
domain = { path = "crates/domain" }
ofm_core = { path = "crates/ofm_core" }
engine = { path = "crates/engine" }
db = { path = "crates/db" }
chrono = "0.4.44"
rand = "0.10"
