[package]
name = "db"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
domain = { version = "0.2.0", path = "../domain" }
log = "0.4"
ofm_core = { version = "0.2.0", path = "../ofm_core" }
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "js"] }
sqlite-wasm-rs = "0.5"
sqlite-wasm-vfs = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
