[package]
name = "engine_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = "0.10"

[features]
default = ["console_errors"]
console_errors = ["dep:console_error_panic_hook"]
