[package]
name = "db"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
domain = { version = "0.2.0", path = "../domain" }
log = "0.4"
ofm_core = { version = "0.2.0", path = "../ofm_core" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
